Oversized items fix + spacing.

--- a/frontend/components/Navigation/navigation.module.css
+++ b/frontend/components/Navigation/navigation.module.css
@@ -18,7 +18,7 @@
 
 .search_bar {
     height: 30px;
-    width: 100%;
+    width: -webkit-fill-available;
 }
 
 .left_nav {
