--- a/frontend/components/NewArrivals/newarrivals.module.css
+++ b/frontend/components/NewArrivals/newarrivals.module.css
@@ -22,6 +22,10 @@
     object-fit: cover;
 }
 
+.newArrivals h1 {
+    margin-top: 0;
+}
+
 .newArrivals h2 {
     font-size: 16px;
     font-weight: 300;
